 - Unify the interface of Activity::on_{start/activity}
 - New function: Comm::get_dst_data()
 - New function: Comm::set_payload_size() to set the amount of bytes to simulate.
 - New functions: Comm::sendto_{init,async} to initiate a communication
   on between two (possibly remote) hosts.

XBT:
 - Drop simgrid::xbt::demangle(). Please use boost::core::demangle() instead.
 - Drop xbt_dynar_cursor_rm(), xbt_dynar_search_or_negative(), xbt_dynar_to_array().

C binding and interface:
 - Rename (lowercase) functions sg_actor_get_PID, sg_actor_get_PPID, sg_actor_by_PID.

Documentation:
 - New section: Configuring the logs from the command line.
 - New section: Programming API of logs.

Fixed bugs (FG#.. -> FramaGit bugs; FG!.. -> FG merge requests)
 (FG: issues on Framagit; GF: issues on GForge; GH: issues on GitHub)
- FG#37: Parallel tasks are limited to 1 core per host
- FG#62: Running "smpirun -replay" on large networks
- GH#343: Wrong consumed energy when an exec timeouts

----------------------------------------------------------------------------

SimGrid (3.26) December 15. 2020

The Release release (the French lockdown was eased today).

Important user-visible changes:
 - SimGrid now requires a compiler with C++14 support.
   Sibling projects should upgrade their FindSimgrid.cmake
 - Surf precision default value is now 1e-9, instead of 1e-5. This was changed as
   several users had difficulties to understand issues when using high bandwidth or
   small latency events. The new value was already the default for SMPI and
   should not cause too much performance hit. It can change some simulation
   timings if simulation was skipping a lot of small events (which was actually
   an issue per see). The old value can be restored with --cfg=surf/precision:1e-5.
 - On some network models (L07, CM02, LV08), an implicit loopback link is created
   for local communication. Default bandwidth was 500MBps and latency was 15µs,